GStreamer: go through GST_STATE_READY explicitly during teardown

This prevents teardown issues when switching to NULL while an
asynchronous sink is waiting in a READY->PAUSED transition.

Task-number: QTBUG-125251
Change-Id: I445fbc1966ecc797133259ee836dd906cd375523
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
(cherry picked from commit 2037ba7a59a62c101d178203853ebcb7d9af644f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 29e8c757df52dd15f350dda6667940700668d806)