src/plugins/multimedia/gstreamer/common/qgstreamermediaplayer.cpp
@@ -459,6 +459,8 @@ QGstreamerMediaPlayer::~QGstreamerMediaPlayer()
 {
     playerPipeline.removeMessageFilter(static_cast<QGstreamerBusMessageFilter *>(this));
     playerPipeline.removeMessageFilter(static_cast<QGstreamerSyncMessageFilter *>(this));
+
+    playerPipeline.setStateSync(GST_STATE_READY);
     playerPipeline.setStateSync(GST_STATE_NULL);
 }
 
